k8s/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
  namespace: docker-registry
spec:
  tls:
    - hosts:
      - 'registry.rolancia.com'
      secretName: 'docker-registry'
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "docker-registry"
                port:
                  number: 5000
      host: registry.rolancia.com
